[package]
name = "businessfn"
description = "Some custom function libraries for business development"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# 开发配置
[profile.dev]
opt-level = 0

# 发布配置
[profile.release]
opt-level = 3